poc: openrewrite java 25 recipe test.