@@ -24,12 +24,12 @@ public class DialogportenRequestMapper {
                                                            LocalDate førsteUttaksdato,
                                                            Ytelsetype ytelsetype,
                                                            String inntektsmeldingSkjemaLenke) {
-        var party = String.format("urn:altinn:organization:identifier-no:%s", organisasjonsnummer.orgnr());
+        var party = "urn:altinn:organization:identifier-no:%s".formatted(organisasjonsnummer.orgnr());
         var foreldrepengerRessurs = Environment.current().getProperty("altinn.tre.inntektsmelding.ressurs");
         var altinnressursFP = ALTINN_RESSURS_PREFIX + foreldrepengerRessurs;
 
         //Oppretter dialog
-        var summaryDialog = String.format("Nav trenger inntektsmelding for å behandle søknad om %s med startdato %s.",
+        var summaryDialog = "Nav trenger inntektsmelding for å behandle søknad om %s med startdato %s.".formatted(
             ytelsetype.name().toLowerCase(),
             førsteUttaksdato);
         var contentDialog = new DialogportenRequest.Content(lagContentValue(sakstittel), lagContentValue(summaryDialog), null);
@@ -48,7 +48,7 @@ public class DialogportenRequestMapper {
             List.of(attachementTransmission));
 
         //oppretter api action
-        var apiAction = new DialogportenRequest.ApiAction(String.format("Innsending av inntektsmelding for %s med startdato %s",
+        var apiAction = new DialogportenRequest.ApiAction("Innsending av inntektsmelding for %s med startdato %s".formatted(
             ytelsetype.name().toLowerCase(),
             førsteUttaksdato.format(DateTimeFormatter.ofPattern("dd.MM.yy"))),
             List.of(new DialogportenRequest.Endpoint(inntektsmeldingSkjemaLenke + "/" + forespørselUuid, DialogportenRequest.HttpMethod.GET, null)),
@@ -75,7 +75,7 @@ public class DialogportenRequestMapper {
             DialogportenRequest.DialogStatus.Completed);
 
         //oppdatere innholdet i dialogen
-        var summaryDialog = String.format("Nav har mottatt inntektsmelding for søknad om %s med startdato %s",
+        var summaryDialog = "Nav har mottatt inntektsmelding for søknad om %s med startdato %s".formatted(
             ytelsetype.name().toLowerCase(),
             førsteUttaksdato.format(
                 DateTimeFormatter.ofPattern("dd.MM.yy")));
