@@ -15,7 +15,7 @@ public class JsonParseExceptionMapper implements ExceptionMapper<JsonParseExcept
 
     @Override
     public Response toResponse(JsonParseException exception) {
-        var feil = String.format("FIM-299955: JSON-parsing feil: %s", exception.getMessage());
+        var feil = "FIM-299955: JSON-parsing feil: %s".formatted(exception.getMessage());
         LOG.warn(feil);
         return Response.status(Response.Status.BAD_REQUEST).entity(new FeilDto(feil)).type(MediaType.APPLICATION_JSON).build();
     }
